# waxell-observe-examples

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
examples/: _common.py
examples/01_anthropic_agent/: README.md  anthropic_agent.py
examples/02_rag_agent/: README.md  rag_agent.py
examples/03_multi_agent/: README.md  multi_agent.py
examples/04_governance_agent/: README.md  governance_agent.py
examples/05_streaming_agent/: README.md  requirements.txt  streaming_agent.py
examples/06_prompt_guard_agent/: README.md  prompt_guard_agent.py
examples/07_support_agent/: README.md  support_agent.py
examples/08_research_agent/: README.md  research_agent.py
examples/09_code_review_agent/: README.md  code_review_agent.py  requirements.txt
examples/10_enrichment_agent/: README.md  enrichment_agent.py  requirements.txt
examples/11_litellm_agent/: README.md  litellm_agent.py  requirements.txt
examples/12_all_providers_agent/: README.md  all_providers_agent.py  requirements.txt
examples/13_groq_agent/: README.md  groq_agent.py  requirements.txt
examples/14_prompt_management_agent/: README.md  prompt_management_agent.py
examples/15_langchain_agent/: README.md  langchain_agent.py  requirements.txt
examples/16_basic_quickstart/: README.md  quickstart.py
