[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waxell-observe-examples"
version = "0.0.1"
description = "Production-ready examples for the waxell-observe SDK"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "waxell-observe[all] @ git+https://github.com/waxell-ai/waxell-observe.git",
    "openai>=1.0",
    "anthropic>=0.18.0",
    "groq>=0.4",
    "litellm>=1.0",
    "langchain-core>=0.1",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
